# kaist_rosbag

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py  test_load.launch
bags/: 2021-08-17-06-28-00.bag  2021-08-17-07-21-59.bag
config/: antidrone_record.sh  command_line_rosbag_record.sh  record_topics_antidrone.sh  record_topics_grasp.sh  record_topics_klio.sh  record_topics_release.sh  record_topics_trigger.sh  rosbag_record_all.sh  scout_rosbag.sh  topics.sh
launch/: kaist_rosbag.launch  kaist_rosbag_antidrone.launch  kaist_rosbag_grasp.launch  kaist_rosbag_release.launch  kaist_rosbag_trigger.launch
nodes/: kaist_rosbag.py  kaist_rosbag_py3.py  trigger_in.py  trigger_state.py
